# pytraining

./: .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
advanced/: 01-resolution.ipynb  02-advanced_inheritance.ipynb
introduction/: 01-introduction.ipynb  02-OOP.ipynb  open_weather_assignment.py  rock_paper_cissor.ipynb
trainings/: 01-OOP_object_creation.ipynb  01-data_structure_iterator_pattern.ipynb  02-data_structure_iterator_pattern.ipynb  03-context_managers.ipynb  04-Decorator.ipynb  04-decorator_fp.ipynb  05-operator_overloading.ipynb  05-opterator_overloading.ipynb  06-misc.ipynb  A1-Grammar.ipynb  README.md
