[tool.pycln]
all = true

[tool.poetry]
name = "pytraining"
version = "0.0.1"
description = "A set of training sessions for intermediate/advanced Python"
authors = ["Jean-Michel begon <jm.begon@gmail.com>"]
license = "BSD3"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.27.1"
pandas = "^2.2.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.8.0"
mypy = "^0.982"
isort = "^5.12.0"
pytest = "^7.2.0"
pycln = "^2.1.2"

[tool.isort]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
